--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - Conta fixa</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.6.0/fonts/remixicon.min.css"
+    />
   </head>
 
   <body>
@@ -17,9 +21,14 @@
               Nome de usuário ou senha incorretos.
             </div>
 
-            <label for="username">Nome</label>
-            <input type="text" id="username" placeholder="Seu nome" required />
-            <label for="password">Senha</label>
+            <label for="username"><i class="ri-mail-ai-line"></i> Email</label>
+            <input
+              type="email"
+              id="username"
+              placeholder="Seu email"
+              required
+            />
+            <label for="password"> <i class="ri-lock-line"></i> Senha</label>
             <input
               type="password"
               id="password"
@@ -32,6 +41,6 @@
       </div>
     </section>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.mjs"></script>
   </body>
 </html>
