--- a/home.html
+++ b/home.html
@@ -101,7 +101,7 @@
             <th><i class="ri-building-line"></i> Empresa</th>
             <th><i class="ri-price-tag-3-line"></i> Tipo</th>
             <th><i class="ri-chat-3-line"></i> Observação</th>
-            <th><i class="ri-settings-3-line"></i> Ações</th>
+            <th><i class="ri-settings-3-line"></i> Ação</th>
           </tr>
         </thead>
         <tbody>
