--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - Conta fixa</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="Logo Conta-Fixa.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/remixicon@4.6.0/fonts/remixicon.min.css"
@@ -14,7 +15,10 @@
   <body>
     <section>
       <div class="login-container">
-        <h2>Entrar</h2>
+        <div class="title-login">
+          <h2>FixControl</h2>
+        </div>
+
         <form>
           <div class="input-group">
             <div class="error-message" id="errorMessage">
@@ -40,6 +44,7 @@
         </form>
       </div>
     </section>
+    <footer>&copy; 2025 Todos os direitos reservados</footer>
 
     <script type="module" src="script.mjs"></script>
   </body>
