--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login - Conta fixa</title>
+    <title>Login - ControleFix</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="Logo Conta-Fixa.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/remixicon@4.6.0/fonts/remixicon.min.css"
@@ -16,7 +16,8 @@
     <section>
       <div class="login-container">
         <div class="title-login">
-          <h2>FixControl</h2>
+          <img src="/Ativo 2.svg" alt="" />
+          <h2>ControleFix</h2>
         </div>
 
         <form>
